Wed, 06 Feb 2008 10:43:47 +0100 <thp@perli.net>
Hide to systray on exit during download

	* src/gpodder/gui.py: Apply patch from Jérôme Chabod
	<jerome.chabod@ifrance.com> to fix a bug: When closing gPodder during
	a download, and "on_quit_hide" is on, gPodder asks for a confirmation
	It should hide gPodder without asking. This patch fix that.

Wed, 06 Feb 2008 10:18:30 +0100 <thp@perli.net>
Usability GUI update (after Rafael Proença's proposal)

	* data/gpodder.glade: Add "Ctrl+L" hotkey to Add new channel; add
	"View" menu with show/hide Toolbar (Ctrl+T) and show/hide episode
	descriptions (Ctrl+D); remove "Update Feeds" button from toolbar and
	add Check for updates button below channel navigator; move the add
	episodes entry and buttons above the channel navigator; thanks to the
	following people who shared their opinions on the mailing list: Rafael
	Proença, Paul Rudkin, Ondrej Vesely, Leonid Ponomarev, Shane Donohoe,
	Jérôme Chabod, Nick (nikosapi); the GUI mockups and the initial idea
	were posted by Rafael Proença
	* src/gpodder/config.py: Add "episode_list_descriptions" and
	"show_toolbar" configuration options that modify the look of the main
	window (both default to "True")
	* src/gpodder/gui.py: Show feed description in seperate line (this
	feature was suggested by narf@inode.at); make the episode list
	treeview widget use the space more efficient; show/hide toolbar and
	show/hide episode description GUI glue code
	* src/gpodder/libgpodder.py: Add "digits" keyword argument to
	format_filesize() (defaults to 2), this is a pass-thru function for
	gpodder.util.format_filesize() (see below)
	* src/gpodder/libpodcasts.py: Support for small- and large-sized
	icons,modify liststore creation code to add description to the title
	column
	* src/gpodder/util.py: Add "digits" keyword argument to
	format_filesize() (defaults to 2), this is used to define the format
	of the filesize; add "icon_size" keyword argument (defaults to 32) to