@@ -1,3 +1,10 @@
+Wed, 06 Feb 2008 10:59:25 +0100 <thp@perli.net>
+NLS encoding support for MP3 player synchronization (from gdfs)
+
+	* src/gpodder/sync.py: Add NLS encoding support from Leonid Ponomarev
+	<leonid.phoenix@gmail.com>; patch modified a bit to better fit the
+	code and be more verbose, so the user knows how we encode the names
+
 Wed, 06 Feb 2008 10:43:47 +0100 <thp@perli.net>
 Hide to systray on exit during download
 
